--- a/homepage/ugly.css
+++ b/homepage/ugly.css
@@ -5,11 +5,11 @@ body {
     font-size: 2.15ex;
     padding: 1ex;
     width: 150ex;
-    align-content: center;
+    align-content: right;
 }
 
 h1 {
-    text-align: center;
+    text-align: right;
     color: orange;
 }
 
@@ -19,9 +19,8 @@ h2 {
 
 .about {
     display: flex;
-    align-items: center;
+    align-items: right;
     width: 90ex;
-    vertical-align: middle;
     background-color: aquamarine;
 }
 
@@ -42,7 +41,7 @@ p.about {
 }
 
 .sidebar {
-    float: left;
+    float: right;
     position: relative;
     width: 60ex;
     left: 90ex;
